Adjusting vertical spacing of partners and advisors lists per issue #19

--- a/_assets/styles/pages/_home.scss
+++ b/_assets/styles/pages/_home.scss
@@ -217,7 +217,7 @@ body.home {
     > .container > div + div {
       margin-top: $padding-xl;
       @include media-md {
-        margin-top: $padding-xl * 1.5;
+        margin-top: $padding-xl;
       }
     }
 
